--- a/requirements-opencv.txt
+++ b/requirements-opencv.txt
@@ -1,8 +1,9 @@
-click==6.7
-Flask==1.1.2
-itsdangerous==0.24
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
-numpy==1.22.0
+click
+Flask
+itsdangerous
+Jinja2
+MarkupSafe
+Werkzeug
+numpy
+flask-cors
 opencv-python
