--- a/requirements-pi2.txt
+++ b/requirements-pi2.txt
@@ -1,7 +1,8 @@
-click==6.7
-Flask==1.1.2
-itsdangerous==0.24
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
-picamera2==0.3.16
+click
+Flask
+itsdangerous
+Jinja2
+MarkupSafe
+Werkzeug
+picamera2
+flask-cors
