--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-click==8.0.3
-Flask==2.0.2
-importlib-metadata==4.8.2
-itsdangerous==2.0.1
-Jinja2==2.11.3
-MarkupSafe==2.0.1
-pkg-resources==0.0.0
-typing-extensions==4.0.1
-Werkzeug==2.0.2
-zipp==3.6.0
+click
+Flask
+importlib-metadata
+itsdangerous
+Jinja2
+MarkupSafe
+pkg-resources
+typing-extensions
+Werkzeug
+zipp
+flask-cors
